Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -137,7 +137,6 @@ header {
     &.extendednavigation {
         .clearfix;
         ul {    
-            width: 100%;
             margin: 16px 0;
             @media @tablet {
                 padding: 0;
